--- a/USAidProjects/AndroidManifest.xml
+++ b/USAidProjects/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="API_KEY"/>
+        
     </application>
 
 </manifest>
