--- a/USAidProjects/AndroidManifest.xml
+++ b/USAidProjects/AndroidManifest.xml
@@ -6,7 +6,14 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -24,8 +31,13 @@
         </activity>
         
         <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        
+        <!-- this is the dev debug key -->
+        <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="API_KEY"/>
+            android:value="AIzaSyC9-kzJMmJeesSp3ZGd9339BQsCAshKyMs"/>
         
     </application>
 
