--- a/USAidProjects/project.properties
+++ b/USAidProjects/project.properties
@@ -11,4 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-18
+target=Google Inc.:Google APIs:19
+android.library.reference.1=..\\..\\ubiquity-jagwire\\samples\\ActionBarSherlock
+android.library.reference.2=../../../android_sdk/extras/google/google_play_services/libproject/google-play-services_lib
