--- a/USAidProjects/AndroidManifest.xml
+++ b/USAidProjects/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.tscience.usaidprojects.USAidMainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
