fixes rotation issue

--- a/USAidProjects/AndroidManifest.xml
+++ b/USAidProjects/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:value="AIzaSyC9-kzJMmJeesSp3ZGd9339BQsCAshKyMs"/>
         
         <!-- work debug  "AIzaSyC9-kzJMmJeesSp3ZGd9339BQsCAshKyMs" -->
-        <!-- home debug  "AIzaSyCmmhsyZ_X6pyuSC8PoeEy7LcjYspDgPC8" -->
+        <!-- distribute  "AIzaSyCkeJWnQ-8U_hnI81jz98BpoxMnu_XsEo0" -->
         
     </application>
 
